# SDLC

./: .coverage  .gitignore  .kilocodemodes  .roomodes  ARCHITECTURE.md  COMMIT_LOG.md  FINAL_STATUS.txt  GIT_COMMIT_INSTRUCTIONS.md  Perplexity_Thread.md  Prompt_thread.md  README.md  RECP_COMPLETION_SUMMARY.md  REPOSITORY_STRUCTURE_ANALYSIS.md  Research.md  STEP_BY_STEP_GIT_GUIDE.md  config_analysis_report.md  coverage.xml  detailed_orphaned_code_analysis.txt  distillation-config.yaml  domain_grouping.py  domain_knowledge_grouping.json  domain_knowledge_grouping.md  dummy_research.md  duplication_analysis_report.txt  extract_knowledge.py  extract_knowledge_atoms.py  extractor.js  gap_report.md  generate_full_registry.py  generate_registry.py  knowledge_atom_extractor.py  knowledge_atom_registry.json  master_knowledge_atoms.json  minimal_extractor.py  orphaned_code_analysis.json  orphaned_code_report.txt  product_specs.json  product_specs_report.md  pyproject.toml  registry_simple.json  (+6 more)
.kilocode/: mcp.json  session-id
.kilocode/rules-research/: rules.md
Kimi-Research/research/: arxiv_confidence_grounding.csv  memory_papers_autolearn.csv  memory_papers_hybrid.csv  memory_scholar_llm.csv
archive/docs_distilled/: domain_groupings.md  knowledge_atom_registry.md
archive/gen1_root_extraction/: atoms_list.txt  knowledge_atom_extraction_report.md  sdlc_phase_knowledge_mapping.md
archive/gen2_distilled/: final_summary.md  prong1_master_atoms.md  validation_report.md
archive/intermediate_prongs/: prong1_knowledge_atoms.md  prong2_domain_split.md  prong4_product_specs_COMPLETE.md
archive/output_test_artifacts/: atoms.yaml  gap_report.txt  phases.yaml
archive/research_distilled_drafts/: prong3_sdlc_phase_specs.md  prong4_product_specs_part1.md  prong4_product_specs_part2.md
corpus/: pyproject.toml
corpus/scripts/: run_full_ingestion.py
corpus/src/corpus/: cli.py  config.py
corpus/src/corpus/consolidation/: branch_retirement.py  gate_runner.py  run_controller.py
corpus/src/corpus/db/: engine.py  models.py  repository.py
corpus/src/corpus/db/migrations/: runner.py
corpus/src/corpus/db/migrations/versions/: 001_initial.sql  001_initial_rollback.sql
corpus/src/corpus/decisions/: card_updater.py  drift_detector.py  generator.py  index_updater.py
corpus/src/corpus/dedup/: arbitrator.py  embeddings.py  minhash.py  pipeline.py
corpus/src/corpus/ingestion/: classifier.py  enumerator.py  normalizer.py  path_mapper.py  pipeline.py
corpus/src/corpus/references/: integrity_validator.py  rewrite_mapper.py  rewriter.py
corpus/src/corpus/retrieval/: formatter.py  orchestrator.py  reranker.py  symbolic_filter.py
corpus/src/corpus/sync/: graph_sync.py  health_checker.py  vector_sync.py
corpus/src/corpus/telemetry/: calibrator.py  collector.py  compactor.py  metrics.py
corpus/tests/: conftest.py  test_kilo_gateway.py
corpus/tests/consolidation/: test_branch_retirement.py
corpus/tests/db/: test_migrations.py  test_models.py  test_repository_core.py
corpus/tests/decisions/: test_card_updater.py  test_index_updater.py
corpus/tests/dedup/: test_arbitrator.py  test_embeddings.py  test_minhash.py  test_pipeline.py
corpus/tests/ingestion/: test_classifier.py  test_enumerator.py  test_ingest_integration.py  test_normalizer.py  test_path_mapper.py
corpus/tests/integration/: test_core_pipeline_smoke.py  test_db_roundtrip.py  test_e2e_scaled.py  test_ingest_smoke.py
corpus/tests/references/: test_integrity_validator.py
corpus/tests/retrieval/: test_formatter.py  test_orchestrator.py  test_reranker.py
corpus/tests/sync/: test_graph_sync.py  test_health_checker.py  test_vector_sync.py
corpus/tests/telemetry/: test_collector.py  test_metrics.py
distillation/: __init__.py  cli.py  prong1_knowledge_atoms.md  prong2_domain_split.md  prong3_sdlc_phases.md  prong4_product_specs.md  prong4_product_specs_COMPLETE.md
distillation/config/: __init__.py  default.yaml  manager.py
distillation/models/: __init__.py  base.py  config.py  knowledge_atom.py  product_spec.py  research.py
distillation/processors/: __init__.py  distiller.py  domain_mapper.py  extraction.py  ingestion.py  monitor.py  phase_assigner.py  product_assembler.py
distillation/templates/: __init__.py  modes.yaml  (+9 more)
distilled/: final_summary.md  gap_report.md  prong1_master_atoms.md  prong2_domains.md  prong3_phases.md  prong4_products.md  validation_report.md
docs/: agent_prompts_batch1.md  agent_prompts_batch2.md  agent_prompts_batch3.md  meta_orchestrator_architecture.md  meta_orchestrator_complete.md
knowledge_atom_extractor/: main.py  test_extractor.py  validate.py
logs/: AGT-001_prompt.md  AGT-002_prompt.md  AGT-003_prompt.md  AGT-004_prompt.md  AGT-005_prompt.md  AGT-006_prompt.md  AGT-007_prompt.md  AGT-008_prompt.md  AGT-009_prompt.md  AGT-010_prompt.md  AGT-011_prompt.md  AGT-012_prompt.md  AGT-013_prompt.md  AGT-014_prompt.md  AGT-015_prompt.md  AGT-016_prompt.md  AGT-017_prompt.md  AGT-018_prompt.md  AGT-019_prompt.md  AGT-020_prompt.md  AGT-021_prompt.md  AGT-022_prompt.md  AGT-023_prompt.md  AGT-024_prompt.md  AGT-025_prompt.md  AGT-026_prompt.md  AGT-027_prompt.md  AGT-028_prompt.md  AGT-029_prompt.md  AGT-030_prompt.md  AGT-031_prompt.md  AGT-032_prompt.md  AGT-033_prompt.md  AGT-034_prompt.md  AGT-035_prompt.md  AGT-036_prompt.md  AGT-037_prompt.md  AGT-038_prompt.md  AGT-039_prompt.md  AGT-040_prompt.md  (+4 more)
output/: knowledge_atoms.json  manifest.json  pipeline_metrics.json
plans/: parallel-research-execution-strategy.md
scripts/: AUDIT_DESIGN.md  README.md  agent_config.json  apply_relevance_audit.py  audit_corpus_relevance.py  benchmark_pipeline.py  bootstrap_corpus.py  distill.py  orchestrator.py  run_all_prompts.py  run_orchestrator.ps1  run_orchestrator.sh  split_prompts.py  test_distill.py  test_single_prompt.py  tier_fix.py
tests/: __init__.py  test_cli.py  test_config.py  test_distillation_pipeline.py  test_domain_phase_mapping.py  test_extraction.py  test_ingestion.py  test_models.py  test_parser.py  test_product_assembler.py  test_schemas.py  test_validator.py
(+629 files in other folders)
